# uusipalautusrepo

./: README.md  viikko4teht5.txt
viikko1/nhl-statistics/: test_statistics_service.py
viikko1/nhl-statistics/src/: index.py  player.py  player_reader.py  statistics_service.py
viikko1/riippuvuuksien-injektointi/: index.py  konsoli_io.py  laskin.py
viikko1/riippuvuuksien-injektointi/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: README.md  index.py  index.py.orig
viikko2/nhl-reader/src/: index.py  player.py
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  pyproject.toml  report.html
viikko3/login/: log.html  output.xml  pyproject.toml  report.html
viikko3/login/src/: AppLibrary.py
viikko3/login/src/tests/: login.robot
viikko4/maksukortti-mock/: pyproject.toml
viikko4/maksukortti-mock/src/: kassapaate.py  maksukortti.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/: index.py  kauppa.py  pankki.py  pyproject.toml
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/: index.py  kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: review.md  testi.txt
viikko5/tennis/: pyproject.toml
viikko5/tennis/src/: tennis_game.py
