[project]
name = "tennis-game"
version = "0.1.0"
description = ""
authors = [
    {name = "petrovaana",email = "petrova.anastasiahusu@gmail.com"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"